# standards-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  LICENSE-proprietary  README.md  rustfmt.toml
IDEs/JetBrains/settings/colors/: _@user_One Dark Vivid Italic.icls
IDEs/JetBrains/settings/options/: highlightTokenConfiguration-v3.xml
src/: foo.rs  main.rs  styles.rs  tests.rs
src/tests/: foo.rs
