[package]
name = "foo"
version = "0.4.0"
description = "Opinionated coding standards for Rust code (example application)"
categories = ["config", "development-tools", "rust-patterns"]
keywords = ["utility"]
edition = "2021"
# For open-source, typically use this:
license = "MIT"
# For closed-source, use this:
#license-file = "LICENSE"
authors = ["Dan Williams <dan@dotfive.co.uk>"]
repository = "https://github.com/dotfive/standards-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true     # Automatically strip symbols from the binary
opt-level = "z"  # Optimise for size
lto = true       # Enable link-time optimisation

[features]
reasons = []

[dependencies]

[dev-dependencies]
tempfile = "3.10.1"
trybuild = "1.0.91"
